# tensor_symbol

./: Cargo.toml  README.md
src/: grad.rs  main.rs  model_context.rs  tensor.rs  variable_inline.rs
src/core/: add_tensor.rs  assign.rs  constant.rs  debug_assign.rs  div_tensor.rs  extend_scale.rs  function.rs  matrix_mul.rs  merge_tensor.rs  mod.rs  mul_tensor.rs  reshape.rs  select.rs  slice_tensor.rs  sub_tensor.rs  sum_scale.rs  variable.rs
src/cpu/: add_tensor.rs  assign.rs  constant.rs  debug_assign.rs  div_tensor.rs  extend_scale.rs  function.rs  matrix_mul.rs  merge_tensor.rs  mod.rs  mul_tensor.rs  reshape.rs  select.rs  slice_tensor.rs  sub_tensor.rs  sum_scale.rs  variable.rs
src/demo/: mnist.rs
src/tools/: idx.rs  mod.rs
