[package]
name = "tensor_symbol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.byteorder]
version = "1.4.3"

[dependencies.rand]
version = "0.8.5"
features = [
    "small_rng",
]

[profile.release]
lto = "fat"
debug = true
